--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
   <header>
     Dit is de header.
   </header>
+  <section>
+    {{ content }}
+  </section>
   <footer>
     Dit is de footer.
   </footer>
