Make CSS work on GitHub Pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,11 @@
 <html>
 <head>
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="{{ site.github.url }}/css/style.css" />
 </head>
 <body>
   <header>
+    
     Dit is de header.
   </header>
   <section>
